--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,106 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# Build outputs
 dist
 dist-ssr
+build
+.next
+out
 *.local
+
+# Environment variables (all variants)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
+.env*.local
+
+# API Keys and Secrets
+*.pem
+*.key
+*.cert
+secrets/
+config/secrets.json
+
+# Testing
+coverage
+.nyc_output
+*.lcov
+.coverage
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
+*.sublime-workspace
+*.sublime-project
+
+# OS files
 .DS_Store
+.DS_Store?
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# IDEs
+*.swp
+*.swo
+*.swn
+*.bak
+*.tmp
+*.temp
 *.suo
+*.user
+*.userosscache
+*.sln.docstates
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Misc
+*.seed
+*.pid
+*.pid.lock
+.cache
+.npm
+.eslintcache
+.node_repl_history
+.yarn-integrity
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
