--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
+# IOTA EVM Testnet Configuration
+VITE_CHAIN_ID=1076
+VITE_RPC_URL=https://json-rpc.evm.testnet.iota.cafe
+
+# Deployed Contract Addresses
+VITE_STREAMING_PAYMENTS_ADDRESS=0x37E141fF46c431D8B8C781f0f1d9b6E1A88d93b9
+VITE_AGENT_REGISTRY_ADDRESS=0xA3630777E25021B1DA2b5BA0a5F5Eed0bB5f0c0d
+VITE_USDC_ADDRESS=0x1ce14fD9dd6678fC3d192f02207d6ff999B04037
+
+# Platform Configuration
+VITE_PLATFORM_FEE_BPS=100
+VITE_FEE_RECIPIENT=0x5ebaddf71482d40044391923be1fc42938129988
+
+# Reown AppKit (WalletConnect)
 VITE_REOWN_PROJECT_ID=your_project_id_here
