feat: add Vercel serverless API functions
- Create 5 serverless functions in /api-vercel/
- Configure vercel.json with API rewrites
- Add environment variables setup guide
- All agents ready for Vercel deployment

--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "x402-api-server",
   "version": "1.0.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "node server.js",
     "start": "node server.js"
