✨ Add API status monitoring and live data to Admin page
- Create useAgentAPI hook for API health checks and live data
- Add health endpoint to Express API server
- Create Vercel health endpoint
- Display API connection status badges (API, Twelve Data, Finnhub)
- Show real-time data from APIs in agent detail cards
- Integrate AGENTS data with full dataSources and methodology
- Display data sources, methodology, and API endpoints for each agent
- Add loading states and error handling for API connectivity

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
   "devCommand": "yarn dev",
   "outputDirectory": "dist",
   "rewrites": [
+    { "source": "/api/health", "destination": "/api-vercel/health" },
     { "source": "/api/agents/signal-forge", "destination": "/api-vercel/signal-forge" },
     { "source": "/api/agents/volatility-pulse", "destination": "/api-vercel/volatility-pulse" },
     { "source": "/api/agents/arb-navigator", "destination": "/api-vercel/arb-navigator" },
