--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "@google/generative-ai": "^0.21.0"
   }
 }
